--- a/lr2/CMakeLists.txt
+++ b/lr2/CMakeLists.txt
@@ -1,4 +1,6 @@
-﻿add_executable (lr2 "lr2.cpp" "lr2.h" "main.cpp")
+﻿include_directories("include")
+
+add_executable (lr2   "src/main.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET lr2 PROPERTY CXX_STANDARD 20)
