--- a/lr3/CMakeLists.txt
+++ b/lr3/CMakeLists.txt
@@ -1,6 +1,6 @@
 ﻿include_directories("include")
 
-add_executable (lr3)
+add_executable (lr3 "src/Manager.cpp" "include/Manager.h" "src/main.cpp" "include/Office.h" "src/Office.cpp" "include/Jack.h" "src/Jack.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET lr3 PROPERTY CXX_STANDARD 20)
