--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/c++,cmake,linux,windows,visualstudio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,cmake,linux,windows,visualstudio,visualstudiocode
 
+bin
+
+
 ### C++ ###
 # Prerequisites
 *.d
