feat: add main characters

--- a/lr4/CMakeLists.txt
+++ b/lr4/CMakeLists.txt
@@ -2,7 +2,7 @@ include_directories("include")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
-add_executable (lr4 "src/main.cpp")
+add_executable (lr4 "src/main.cpp" "src/Service.cpp" "include/Service.h" "include/Player.h" "src/Player.cpp" "include/Dealer.h" "src/Dealer.cpp" "include/Manager.h" "src/Manager.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET lr4 PROPERTY CXX_STANDARD 20)
